# becomy

./: .gitignore
backend/: Cargo.toml  Dockerfile  sqlx-data.json
backend/dev/: docker-compose.yml
backend/docker/: docker-compose.yml
backend/migrations/: 20230220203407_add_contacts_table.up.sql  20230221003912_add_birthday_and_data_to_contacts_table.down.sql  20230221003912_add_birthday_and_data_to_contacts_table.up.sql
backend/src/: main.rs
backend/src/controller/: contact.rs
backend/src/entities/: contact.rs
backend/src/startup/: db_config.rs  mod.rs  server_config.rs
frontend/: .env.production  package.json  vite.config.ts.timestamp-1677435095866.mjs
frontend/src/: App.tsx
frontend/src/components/: add-dialog-app-bar.tsx  add-dialog-text-field.tsx  add-dialog.tsx  contact-list-item-header.tsx  contact-list-item.tsx  contact-list.tsx
frontend/src/components/contact-list/: contact-list-item.tsx  contact-list.tsx
frontend/src/components/edit-dialog/: edit-dialog-app-bar.tsx  edit-dialog-text-field.tsx  edit-dialog.tsx
frontend/src/query/: use-contact-query.ts
