[package]
name = "be_co_my"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.3.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
sqlx = { version = "0.6.2", features = [ "postgres", "runtime-actix-rustls" ] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
env_logger = "0.10.0"
